# envsense

./: .actrc  .dockerignore  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_IMPROVEMENTS_IMPLEMENTATION.md  CONTRACT.md  Cargo.toml  Dockerfile.dev  Dockerfile.test  PR_DESCRIPTION.md  README.md  UPDATED_PR_DESCRIPTION.md  aqua-registry-entry.yaml  build.rs  changelog_excerpt.md  lefthook.yml  mise.toml  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.local.json
.cursor/rules/: overview.mdc
.devcontainer/: Dockerfile
.github/: actionlint.yaml  actionlint.yml
.github/workflows/: ci.yml  release.yml  test-release-scripts.yml  test-signing.yml  validate-release.yml
docs/: README.md  architecture.md  debugging-ci.md  development.md  extending.md  initial-implementation-plan.md  macro-migration-guide.md  migration-guide.md  reorganize-planning-docs.sh  script-integration.md  terminal-traits.md  testing-aqua-installation.md  testing.md
docs/archive/: README.md  initial-implementation-plan.md  (+1 more)
envsense-macros/: Cargo.toml
examples/: no_color.rs
homebrew/: envsense.rb
scripts/: benchmark-performance.sh  build-target.sh  check-signing-completed.sh  check-version-change.sh  compare-baseline.sh  compare-environments.sh  create-release.sh  debug-signature-verification.sh  dev-docker.sh  filter-release-files.sh  install_lld.sh  monitor-and-validate-release.sh  monitor-release-workflow.sh  prepare-binary.sh  run-in-docker.sh  sign-release-binaries.sh  test-aqua-local.sh  test-ci-environment.sh  test-release-scripts-locally.sh  test-release.sh  validate-binary.sh  validate-check-version-change.sh  validate-comprehensive-testing.sh  validate-release.sh  validate-signing.sh  validate-simple.sh  verify-release-signatures.sh
src/: agent.rs  check.rs  ci.rs  config.rs  engine.rs  envsense_ci.rs  evidence.rs  lib.rs  main.rs  schema.rs
tests/: cli.rs  cli_configuration.rs  cli_declarative.rs  cli_deprecation_warnings.rs  cli_error_handling.rs  cli_output_formatting.rs  cli_terminal.rs  comprehensive_validation.rs  confidence_tests.rs  debug_evidence.rs  debug_host_detection.rs  declarative_compatibility.rs  declarative_integration_tests.rs  dependency_injection_demo.rs  evidence_helper_methods_test.rs  info_snapshots.rs  integration_declarative.rs  macro_basic_test.rs  macro_field_parsing_test.rs  macro_nested_test.rs  macro_performance_test.rs  macro_real_struct_test.rs  mapping_tests.rs  nested_trait_integration.rs
(+124 files in other folders)
