[workspace]
members = [
  ".",                                    # Main crate (current directory)
  "envsense-macros",                      # Macro crate
  "envsense-macros/envsense-macros-impl", # Proc-macro implementation
]

[package]
name = "envsense"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"
is-terminal = "0.4"
supports-color = "3"
supports-hyperlinks = "3"
# ci_info dependency removed - using declarative CI detection instead
envsense-macros = { path = "./envsense-macros" }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
predicates = "3"
serial_test = "2"
temp-env = "0.3"
